[package]
name = "nibble"
version = "0.1.0"
edition = "2021"
authors = ["Mysz Team"]
description = "Mysz •<:3O-~"

[dependencies]
mysz-core = { git = "https://github.com/mysz-lang/mysz-core.git", branch = "main" }

clap = { version = "4.4", features = ["derive", "env"] }
anyhow = "1.0"
tempfile = "3.8"
dirs = "5.0"
reqwest = { version = "0.12", features = ["blocking"] }
flate2 = "1.0"
tar = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1.2"